MNGW-5589: Fix bugs introduced by last commit to search input alignment.

--- a/app/styles/directives/_nxgSearch.scss
+++ b/app/styles/directives/_nxgSearch.scss
@@ -3,7 +3,7 @@
 // ===========
 
 #search {
-  .col-xs-3 {
+  .small-left-border {
     border-top: 0;
     border-bottom: 0;
     border-left: 1px solid #bbb;
